<resources>
    <string name="app_name">Imc App</string>

    <string name="Login_titulo">Login</string>
    <string name="Login_subtitulo">Faça o login para continuar</string>
    <string name="Login_et_email">E-mail</string>
    <string name="Login_et_senha">Senha</string>
    <string name="Login_entrar">Entrar</string>
    <string name="Login_lembrar_me">Lembrar-me</string>
    <string name="Login_esqueci">Esqueci a senha</string>
    <string name="Login_tenho_uma_conta">Não tenho uma conta</string>
    <string name="Login_tem_uma_conta">Não tem uma conta?</string>
    <string name="Login_criar_conta">criar conta</string>
</resources>