<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/orange_700"
        android:padding="16dp"

        />

    <TextView
        android:id="@+id/tvtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/bowlby_one"
        android:gravity="end"
        android:text="Health \n calc"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <ImageView

        android:id="@+id/tvtitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvtitulo"
        android:layout_alignBottom="@+id/tvtitulo"
        android:layout_alignParentEnd="true"
        android:src="@drawable/imc_64"


        />


    <ImageView
        android:id="@+id/iv_wave_top"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_below="@+id/rl"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave__baixo_" />

    <ImageView
        android:id="@+id/iv_wave_down"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_wave_cima"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:text="Desenvolvido por DS2T-A"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_wave_top"
        android:layout_above="@+id/iv_wave_down"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/iv_wave_down"
            android:layout_below="@+id/iv_wave_top"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingStart="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_titulo"
                android:textSize="48sp"
                android:textAppearance="@style/titulo" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login_subtitulo" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/Login_et_email"
                app:endIconMode="clear_text">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/Login_et_senha"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Button android:id="@+id/buttonentrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login_entrar"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.Button"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_lembrar_me"
                android:layout_gravity="end"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_esqueci"
                android:layout_gravity="end"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_tem_uma_conta"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_criar_conta"
                    android:layout_gravity="end"
                    style="@style/button_login"
                    android:textAllCaps="false"/>


            </LinearLayout>



        </LinearLayout>






    </ScrollView>


</RelativeLayout>